--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.4.0"}}}
-
+    {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.4.0"}}},
+    {jsone, {git, "https://github.com/sile/jsone.git", {tag, "1.4.6"}}},
+    {erlydtl, {git, "https://github.com/erlydtl/erlydtl.git", {tag, "0.12.1"}}}
     ]}.
