Include the erlang-uuid lib

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.4.0"}}},
-    {jsone, {git, "https://github.com/sile/jsone.git", {tag, "1.4.6"}}},
-    {erlydtl, {git, "https://github.com/erlydtl/erlydtl.git", {tag, "0.12.1"}}}
-    ]}.
+        {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.4.0"}}},
+        {jsone, {git, "https://github.com/sile/jsone.git", {tag, "1.4.6"}}},
+        {erlydtl, {git, "https://github.com/erlydtl/erlydtl.git", {tag, "0.12.1"}}},
+        {uuid, ".*", {git, "https://github.com/avtobiff/erlang-uuid.git", {tag, "v0.5.2"}}}
+       ]}.
